force-app/main/default/objects/Account/fields/Accepted_Worker_Type__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Worker_Type__c</fullName>
    <label>Accepted Worker Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Worker_Type</valueSetName>
    </valueSet>
</CustomField>