force-app/main/default/objects/Account/fields/Administrative_Ward__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Ward__c</fullName>
    <label>Administrative Ward</label>
    <length>80</length>
    <type>Text</type>
</CustomField>