force-app/main/default/objects/Account/fields/Admissions_Policy__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Policy__c</fullName>
    <label>Admissions Policy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>