force-app/main/default/objects/Account/fields/Boarders__c.field-meta.xml
<CustomField>
    <fullName>Boarders__c</fullName>
    <label>Boarders</label>
    <length>80</length>
    <type>Text</type>
</CustomField>