force-app/main/default/objects/Account/fields/Company_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Reg_No__c</fullName>
    <label>Company Reg No.</label>
    <length>8</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>