force-app/main/default/objects/Account/fields/Council__c.field-meta.xml
<CustomField>
    <fullName>Council__c</fullName>
    <label>Council</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>County Council</fullName>
            </value>
            <value>
                <fullName>District Council</fullName>
            </value>
            <value>
                <fullName>Unitary Authority</fullName>
            </value>
            <value>
                <fullName>Metropolitan District</fullName>
            </value>
            <value>
                <fullName>London Borough</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>