force-app/main/default/objects/Account/fields/Council_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Council_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Council Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients (Council Lookup)</relationshipLabel>
    <relationshipName>Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>