force-app/main/default/objects/Account/fields/Debtors_Days_Reliability__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Days_Reliability__c</fullName>
    <label>Debtors Days Reliability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>