force-app/main/default/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Commissioning Department within LA</fullName>
            </value>
            <value>
                <fullName>Disabilities Department within LA</fullName>
            </value>
            <value>
                <fullName>Inclusion Team (any child who isnt CLA and does not have an EHCP) within LA</fullName>
            </value>
            <value>
                <fullName>Leaving Care Department within LA</fullName>
            </value>
            <value>
                <fullName>Permanence (Placements) Department within LA</fullName>
            </value>
            <value>
                <fullName>Safeguarding Department within LA</fullName>
            </value>
            <value>
                <fullName>Section 19 Team Department within LA</fullName>
            </value>
            <value>
                <fullName>SEND Team (any Child with an EHCP) within LA</fullName>
            </value>
            <value>
                <fullName>Social Care Department within LA</fullName>
            </value>
            <value>
                <fullName>Virtual School within LA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>