force-app/main/default/objects/Account/fields/Diocese__c.field-meta.xml
<CustomField>
    <fullName>Diocese__c</fullName>
    <label>Diocese</label>
    <length>80</length>
    <type>Text</type>
</CustomField>