force-app/main/default/objects/Account/fields/District_Administrative__c.field-meta.xml
<CustomField>
    <fullName>District_Administrative__c</fullName>
    <label>District Administrative</label>
    <length>80</length>
    <type>Text</type>
</CustomField>