force-app/main/default/objects/Account/fields/Establishment_Name__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Name__c</fullName>
    <label>Establishment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>