force-app/main/default/objects/Account/fields/Establishment_Number__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Number__c</fullName>
    <label>Establishment Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>