force-app/main/default/objects/Account/fields/Establishment_Type_Group__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Type_Group__c</fullName>
    <label>Establishment Type Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>