force-app/main/default/objects/Account/fields/Evertime_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Evertime_Communication_Method__c</fullName>
    <label>Evertime Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>