force-app/main/default/objects/Account/fields/Evertime_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Evertime_External_ID__c</fullName>
    <formula>IF(
  RecordType.DeveloperName = &quot;Self_Bill&quot; || RecordType.DeveloperName = &quot;Umbrella&quot;,
  &quot;COMPANY-&quot;,
  &quot;CLIENT-&quot;
) &amp;
IF(
  INCLUDES(Brand__c, &quot;Health &amp; Social Care&quot;) || INCLUDES(Brand__c, &quot;Teaching&quot;) || INCLUDES(Brand__c, &quot;Integrated&quot;),
  IF(INCLUDES(Brand__c, &quot;Health &amp; Social Care&quot;), &quot;HSC&quot;, &quot;&quot;) &amp;
  IF(INCLUDES(Brand__c, &quot;Health &amp; Social Care&quot;) &amp;&amp; (INCLUDES(Brand__c, &quot;Teaching&quot;) || INCLUDES(Brand__c, &quot;Integrated&quot;)), &quot;/&quot;, &quot;&quot;) &amp;
  IF(INCLUDES(Brand__c, &quot;Teaching&quot;), &quot;TEA&quot;, &quot;&quot;) &amp;
  IF(INCLUDES(Brand__c, &quot;Teaching&quot;) &amp;&amp; INCLUDES(Brand__c, &quot;Integrated&quot;), &quot;/&quot;, &quot;&quot;) &amp;
  IF(INCLUDES(Brand__c, &quot;Integrated&quot;), &quot;INT&quot;, &quot;&quot;) &amp;
  &quot;-&quot;,
  &quot;&quot;
) &amp;
BLANKVALUE(Legacy_Evertime_External_ID__c, Auto_Evertime_External_ID__c)</formula>
    <label>Evertime External ID</label>
    <type>Text</type>
</CustomField>