force-app/main/default/objects/Account/fields/Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Fee_Percentage__c</fullName>
    <label>Fee Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>