force-app/main/default/objects/Account/fields/Further_Education_Type__c.field-meta.xml
<CustomField>
    <fullName>Further_Education_Type__c</fullName>
    <label>Further Education Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>