force-app/main/default/objects/Account/fields/Gender_of_Students_on_Roll__c.field-meta.xml
<CustomField>
    <fullName>Gender_of_Students_on_Roll__c</fullName>
    <label>Gender of Students on Roll</label>
    <length>80</length>
    <type>Text</type>
</CustomField>