force-app/main/default/objects/Account/fields/GOR__c.field-meta.xml
<CustomField>
    <fullName>GOR__c</fullName>
    <label>GOR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>