force-app/main/default/objects/Account/fields/Head_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Head_Last_Name__c</fullName>
    <label>Head Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>