force-app/main/default/objects/Account/fields/Head_Title__c.field-meta.xml
<CustomField>
    <fullName>Head_Title__c</fullName>
    <label>Head Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>