force-app/main/default/objects/Account/fields/Health_Social_Care_Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Health_Social_Care_Age_Group__c</fullName>
    <label>Health &amp; Social Care Age Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Age_Group</valueSetName>
    </valueSet>
</CustomField>