force-app/main/default/objects/Account/fields/Health_Social_Care_Department__c.field-meta.xml
<CustomField>
    <fullName>Health_Social_Care_Department__c</fullName>
    <label>Health &amp; Social Care Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commissioning Department within LA</fullName>
            </value>
            <value>
                <fullName>Disabilities Department within LA</fullName>
            </value>
            <value>
                <fullName>Permanence (Placements) Department within LA</fullName>
            </value>
            <value>
                <fullName>Safeguarding Department within LA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>