force-app/main/default/objects/Account/fields/Health_Social_Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Health_Social_Care_Type__c</fullName>
    <label>Health &amp; Social Care Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Management Company</fullName>
            </value>
            <value>
                <fullName>Council</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Health Board</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>NHS Organisation</fullName>
            </value>
            <value>
                <fullName>Private Care Organisation</fullName>
            </value>
            <value>
                <fullName>Private Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>