force-app/main/default/objects/Account/fields/Inspectorate_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspectorate_Name__c</fullName>
    <label>Inspectorate Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>