force-app/main/default/objects/Account/fields/Invoice_Expenses_Separately__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Expenses_Separately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Expenses Separately</label>
    <type>Checkbox</type>
</CustomField>