force-app/main/default/objects/Account/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Two-Weekly</fullName>
            </value>
            <value>
                <fullName>445 Monthly</fullName>
            </value>
            <value>
                <fullName>Calendar Monthly</fullName>
            </value>
            <value>
                <fullName>Termly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>