force-app/main/default/objects/Account/fields/LA_Code_New__c.field-meta.xml
<CustomField>
    <fullName>LA_Code_New__c</fullName>
    <label>LA Code New</label>
    <length>80</length>
    <type>Text</type>
</CustomField>