force-app/main/default/objects/Account/fields/LA_Code_Old__c.field-meta.xml
<CustomField>
    <fullName>LA_Code_Old__c</fullName>
    <label>LA Code Old</label>
    <length>80</length>
    <type>Text</type>
</CustomField>