force-app/main/default/objects/Account/fields/LA_Name__c.field-meta.xml
<CustomField>
    <fullName>LA_Name__c</fullName>
    <label>LA Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>