force-app/main/default/objects/Account/fields/Language_Specialism__c.field-meta.xml
<CustomField>
    <fullName>Language_Specialism__c</fullName>
    <label>Language Specialism</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Welsh</fullName>
            </value>
            <value>
                <fullName>Mandarin / Chinese</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Latin / Classics</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>