force-app/main/default/objects/Account/fields/Last_Job_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Created_Date__c</fullName>
    <label>Last Job Created Date</label>
    <type>Date</type>
</CustomField>