force-app/main/default/objects/Account/fields/Last_Perm_Placement_Created__c.field-meta.xml
<CustomField>
    <fullName>Last_Perm_Placement_Created__c</fullName>
    <label>Last Perm Placement Created</label>
    <type>Date</type>
</CustomField>