force-app/main/default/objects/Account/fields/Last_Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Shift_Date__c</fullName>
    <label>Last Shift Date</label>
    <type>Date</type>
</CustomField>