force-app/main/default/objects/Account/fields/Legacy_Evertime_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Evertime_External_ID__c</fullName>
    <label>Legacy Evertime External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>