force-app/main/default/objects/Account/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <label>Legacy ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>