force-app/main/default/objects/Account/fields/Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System__c</fullName>
    <label>Legacy System</label>
    <length>80</length>
    <type>Text</type>
</CustomField>