force-app/main/default/objects/Account/fields/Local_Authority__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Authority Lookup</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Local Authority</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>