force-app/main/default/objects/Account/fields/Multi_Client_Job_Client__c.field-meta.xml
<CustomField>
    <fullName>Multi_Client_Job_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Client Job Client</label>
    <type>Checkbox</type>
</CustomField>