force-app/main/default/objects/Account/fields/Number_of_Pupils_on_Roll__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pupils_on_Roll__c</fullName>
    <label>Number of Pupils on Roll</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>