force-app/main/default/objects/Account/fields/Nursery_Provision__c.field-meta.xml
<CustomField>
    <fullName>Nursery_Provision__c</fullName>
    <label>Nursery Provision</label>
    <length>80</length>
    <type>Text</type>
</CustomField>