force-app/main/default/objects/Account/fields/Official_Sixth_Form__c.field-meta.xml
<CustomField>
    <fullName>Official_Sixth_Form__c</fullName>
    <label>Official Sixth Form</label>
    <length>80</length>
    <type>Text</type>
</CustomField>