force-app/main/default/objects/Account/fields/Parliamentary_Constituency__c.field-meta.xml
<CustomField>
    <fullName>Parliamentary_Constituency__c</fullName>
    <label>Parliamentary Constituency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>