force-app/main/default/objects/Account/fields/Percentage_of_Free_School_Meals__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Free_School_Meals__c</fullName>
    <label>Percentage of Free School Meals</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>