force-app/main/default/objects/Account/fields/Phase_Of_Education__c.field-meta.xml
<CustomField>
    <fullName>Phase_Of_Education__c</fullName>
    <label>Phase Of Education</label>
    <length>80</length>
    <type>Text</type>
</CustomField>