force-app/main/default/objects/Account/fields/Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Required__c</fullName>
    <label>Purchase Order Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>