force-app/main/default/objects/Account/fields/Record_Exists__c.field-meta.xml
<CustomField>
    <fullName>Record_Exists__c</fullName>
    <formula>NOT(ISBLANK(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Exists</label>
    <type>Checkbox</type>
</CustomField>