force-app/main/default/objects/Account/fields/Religious_Character__c.field-meta.xml
<CustomField>
    <fullName>Religious_Character__c</fullName>
    <label>Religious Character</label>
    <length>80</length>
    <type>Text</type>
</CustomField>