force-app/main/default/objects/Account/fields/Religious_Ethos__c.field-meta.xml
<CustomField>
    <fullName>Religious_Ethos__c</fullName>
    <label>Religious Ethos</label>
    <length>80</length>
    <type>Text</type>
</CustomField>