force-app/main/default/objects/Account/fields/Sage_ID__c.field-meta.xml
<CustomField>
    <fullName>Sage_ID__c</fullName>
    <label>Sage ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>