force-app/main/default/objects/Account/fields/Sales_Aggregate_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Aggregate_Type__c</fullName>
    <label>Sales Aggregate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consolidated</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Timesheet</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Candidatepedate</fullName>
            </value>
            <value>
                <fullName>Potocand</fullName>
            </value>
            <value>
                <fullName>Candandloc</fullName>
            </value>
            <value>
                <fullName>invoiceperweekendandlocation</fullName>
            </value>
            <value>
                <fullName>invoicepercostcentre</fullName>
            </value>
            <value>
                <fullName>invoiceperweekendandconsolidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>