force-app/main/default/objects/Account/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Free School</fullName>
            </value>
            <value>
                <fullName>Independent School</fullName>
            </value>
            <value>
                <fullName>Local Authority Maintained School</fullName>
            </value>
            <value>
                <fullName>Online Provider</fullName>
            </value>
            <value>
                <fullName>Other Type</fullName>
            </value>
            <value>
                <fullName>Special School</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Welsh School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>