force-app/main/default/objects/Account/fields/School_Sponsor_Flag__c.field-meta.xml
<CustomField>
    <fullName>School_Sponsor_Flag__c</fullName>
    <label>School Sponsor Flag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>