force-app/main/default/objects/Account/fields/School_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>School_Sponsors__c</fullName>
    <label>School Sponsors</label>
    <length>80</length>
    <type>Text</type>
</CustomField>