force-app/main/default/objects/Account/fields/SEN__c.field-meta.xml
<CustomField>
    <fullName>SEN__c</fullName>
    <label>SEN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>