force-app/main/default/objects/Account/fields/sirenum__BACS_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>sirenum__BACS_Account_Name__c</fullName>
    <label>BACS Account Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>