force-app/main/default/objects/Account/fields/sirenum__Clone_Rates_on_New_Placements__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Clone_Rates_on_New_Placements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, then any new placement being created will clone the account-level rates.</inlineHelpText>
    <label>Clone Rates on New Contracts</label>
    <type>Checkbox</type>
</CustomField>