force-app/main/default/objects/Account/fields/sirenum__default_pay_cycle__c.field-meta.xml
<CustomField>
    <fullName>sirenum__default_pay_cycle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Payroll Cycle</label>
    <referenceTo>sirenum__Payroll_Cycle__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>