force-app/main/default/objects/Account/fields/sirenum__Default_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Default_Profit_Margin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Profit Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>